# IFEM-HM

./: CMakeLists.txt  HMArgs.C  HMArgs.h  HMProperties.C  HMProperties.h  HeatTransfer.C  HeatTransfer.h  MassTransfer.C  MassTransfer.h  README.md  SIMHM.h  SIMHeatTransfer.h  SIMMassTransfer.h  main_HM.C  main_HeatTransfer.C
Test/: Slab.hreg  Slab.reg  Slab.vreg  Slab.xinp  TestHMProperties.C
doc/: Doxyfile.in  HeatMassTransfer.dox.in
jenkins/: build.sh
